opendaylight/sal/yang-prototype/code-generator/yang-model-parser-impl/src/main/java/org/opendaylight/controller/antlrv4/code/gen/YangParser.java
/*
 * Copyright (c) 2013 Cisco Systems, Inc. and others.  All rights reserved.
 *
 * This program and the accompanying materials are made available under the
 * terms of the Eclipse Public License v1.0 which accompanies this distribution,
 * and is available at http://www.eclipse.org/legal/epl-v10.html
 */
package org.opendaylight.controller.antlrv4.code.gen;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({ "all", "warnings", "unchecked", "unused", "cast" })
public class YangParser extends Parser {
    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache = new PredictionContextCache();
    public static final int CHOICE_KEYWORD = 65, YIN_ELEMENT_KEYWORD = 8,
            WHEN_KEYWORD = 10, REVISION_KEYWORD = 21, DESCRIPTION_KEYWORD = 60,
            NAMESPACE_KEYWORD = 35, MODULE_KEYWORD = 37,
            REFERENCE_KEYWORD = 24, CONTACT_KEYWORD = 63,
            LEAF_LIST_KEYWORD = 43, REVISION_DATE_KEYWORD = 20,
            BELONGS_TO_KEYWORD = 68, LEAF_KEYWORD = 44, PREFIX_KEYWORD = 27,
            DEFAULT_KEYWORD = 61, PRESENCE_KEYWORD = 26, ARGUMENT_KEYWORD = 71,
            NOTIFICATION_KEYWORD = 34, RPC_KEYWORD = 19,
            CONTAINER_KEYWORD = 62, DEVIATION_KEYWORD = 55,
            STATUS_KEYWORD = 18, IDENTITY_KEYWORD = 50, IDENTIFIER = 73,
            REFINE_KEYWORD = 23, USES_KEYWORD = 12, VALUE_KEYWORD = 11,
            IMPORT_KEYWORD = 48, INPUT_KEYWORD = 46, IF_FEATURE_KEYWORD = 49,
            PLUS = 4, PATTERN_KEYWORD = 29, LENGTH_KEYWORD = 42,
            FEATURE_KEYWORD = 53, REQUIRE_INSTANCE_KEYWORD = 22,
            ORGANIZATION_KEYWORD = 32, UNIQUE_KEYWORD = 14,
            SUBMODULE_KEYWORD = 17, TYPE_KEYWORD = 16, RIGHT_BRACE = 3,
            ERROR_MESSAGE_KEYWORD = 57, LINE_COMMENT = 6, OUTPUT_KEYWORD = 31,
            MIN_ELEMENTS_KEYWORD = 38, MUST_KEYWORD = 36, SEMICOLON = 1,
            POSITION_KEYWORD = 28, PATH_KEYWORD = 30, S = 75, KEY_KEYWORD = 45,
            EXTENSION_KEYWORD = 56, START_BLOCK_COMMENT = 7, WS = 5,
            MANDATORY_KEYWORD = 40, ORDERED_BY_KEYWORD = 33,
            ERROR_APP_TAG_KEYWORD = 58, INCLUDE_KEYWORD = 47,
            ANYXML_KEYWORD = 72, AUGMENT_KEYWORD = 70, DEVIATE_KEYWORD = 54,
            LEFT_BRACE = 2, YANG_VERSION_KEYWORD = 9, LIST_KEYWORD = 41,
            TYPEDEF_KEYWORD = 15, MAX_ELEMENTS_KEYWORD = 39, ENUM_KEYWORD = 59,
            CASE_KEYWORD = 66, UNITS_KEYWORD = 13, GROUPING_KEYWORD = 51,
            END_BLOCK_COMMENT = 76, BASE_KEYWORD = 69, RANGE_KEYWORD = 25,
            FRACTION_DIGITS_KEYWORD = 52, CONFIG_KEYWORD = 64,
            BIT_KEYWORD = 67, STRING = 74;
    public static final String[] tokenNames = { "<INVALID>", "SEMICOLON",
            "LEFT_BRACE", "'}'", "'+'", "WS", "LINE_COMMENT", "'/*'",
            "'yin-element'", "'yang-version'", "'when'", "'value'", "'uses'",
            "'units'", "'unique'", "'typedef'", "'type'", "'submodule'",
            "'status'", "'rpc'", "'revision-date'", "'revision'",
            "'require-instance'", "'refine'", "'reference'", "'range'",
            "'presence'", "'prefix'", "'position'", "'pattern'", "'path'",
            "'output'", "'organization'", "'ordered-by'", "'notification'",
            "'namespace'", "'must'", "'module'", "'min-elements'",
            "'max-elements'", "'mandatory'", "'list'", "'length'",
            "'leaf-list'", "'leaf'", "'key'", "'input'", "'include'",
            "'import'", "'if-feature'", "'identity'", "'grouping'",
            "'fraction-digits'", "'feature'", "'deviate'", "'deviation'",
            "'extension'", "'error-message'", "'error-app-tag'", "'enum'",
            "'description'", "'default'", "'container'", "'contact'",
            "'config'", "'choice'", "'case'", "'bit'", "'belongs-to'",
            "'base'", "'augment'", "'argument'", "'anyxml'", "IDENTIFIER",
            "STRING", "S", "'*/'" };
    public static final int RULE_yang = 0, RULE_string = 1,
            RULE_identifier_stmt = 2, RULE_stmtend = 3,
            RULE_deviate_replace_stmt = 4, RULE_deviate_delete_stmt = 5,
            RULE_deviate_add_stmt = 6, RULE_deviate_not_supported_stmt = 7,
            RULE_deviation_stmt = 8, RULE_notification_stmt = 9,
            RULE_output_stmt = 10, RULE_input_stmt = 11, RULE_rpc_stmt = 12,
            RULE_when_stmt = 13, RULE_augment_stmt = 14,
            RULE_uses_augment_stmt = 15, RULE_refine_anyxml_stmts = 16,
            RULE_refine_case_stmts = 17, RULE_refine_choice_stmts = 18,
            RULE_refine_list_stmts = 19, RULE_refine_leaf_list_stmts = 20,
            RULE_refine_leaf_stmts = 21, RULE_refine_container_stmts = 22,
            RULE_refine_pom = 23, RULE_refine_stmt = 24, RULE_uses_stmt = 25,
            RULE_anyxml_stmt = 26, RULE_case_stmt = 27,
            RULE_short_case_stmt = 28, RULE_choice_stmt = 29,
            RULE_unique_stmt = 30, RULE_key_stmt = 31, RULE_list_stmt = 32,
            RULE_leaf_list_stmt = 33, RULE_leaf_stmt = 34,
            RULE_container_stmt = 35, RULE_grouping_stmt = 36,
            RULE_value_stmt = 37, RULE_max_value_arg = 38,
            RULE_max_elements_stmt = 39, RULE_min_elements_stmt = 40,
            RULE_error_app_tag_stmt = 41, RULE_error_message_stmt = 42,
            RULE_must_stmt = 43, RULE_ordered_by_arg = 44,
            RULE_ordered_by_stmt = 45, RULE_presence_stmt = 46,
            RULE_mandatory_arg = 47, RULE_mandatory_stmt = 48,
            RULE_config_arg = 49, RULE_config_stmt = 50, RULE_status_arg = 51,
            RULE_status_stmt = 52, RULE_position_stmt = 53, RULE_bit_stmt = 54,
            RULE_bits_specification = 55, RULE_union_specification = 56,
            RULE_identityref_specification = 57,
            RULE_instance_identifier_specification = 58,
            RULE_require_instance_arg = 59, RULE_require_instance_stmt = 60,
            RULE_path_stmt = 61, RULE_leafref_specification = 62,
            RULE_enum_stmt = 63, RULE_enum_specification = 64,
            RULE_default_stmt = 65, RULE_pattern_stmt = 66,
            RULE_length_stmt = 67, RULE_string_restrictions = 68,
            RULE_fraction_digits_stmt = 69, RULE_decimal64_specification = 70,
            RULE_range_stmt = 71, RULE_numerical_restrictions = 72,
            RULE_type_body_stmts = 73, RULE_type_stmt = 74,
            RULE_typedef_stmt = 75, RULE_if_feature_stmt = 76,
            RULE_feature_stmt = 77, RULE_base_stmt = 78,
            RULE_identity_stmt = 79, RULE_yin_element_arg = 80,
            RULE_yin_element_stmt = 81, RULE_argument_stmt = 82,
            RULE_extension_stmt = 83, RULE_revision_date_stmt = 84,
            RULE_revision_stmt = 85, RULE_units_stmt = 86,
            RULE_reference_stmt = 87, RULE_description_stmt = 88,
            RULE_contact_stmt = 89, RULE_organization_stmt = 90,
            RULE_belongs_to_stmt = 91, RULE_prefix_stmt = 92,
            RULE_namespace_stmt = 93, RULE_include_stmt = 94,
            RULE_import_stmt = 95, RULE_yang_version_stmt = 96,
            RULE_data_def_stmt = 97, RULE_body_stmts = 98,
            RULE_revision_stmts = 99, RULE_linkage_stmts = 100,
            RULE_meta_stmts = 101, RULE_submodule_header_stmts = 102,
            RULE_module_header_stmts = 103, RULE_submodule_stmt = 104,
            RULE_module_stmt = 105;
    public static final String[] ruleNames = { "yang", "string",
            "identifier_stmt", "stmtend", "deviate_replace_stmt",
            "deviate_delete_stmt", "deviate_add_stmt",
            "deviate_not_supported_stmt", "deviation_stmt",
            "notification_stmt", "output_stmt", "input_stmt", "rpc_stmt",
            "when_stmt", "augment_stmt", "uses_augment_stmt",
            "refine_anyxml_stmts", "refine_case_stmts", "refine_choice_stmts",
            "refine_list_stmts", "refine_leaf_list_stmts", "refine_leaf_stmts",
            "refine_container_stmts", "refine_pom", "refine_stmt", "uses_stmt",
            "anyxml_stmt", "case_stmt", "short_case_stmt", "choice_stmt",
            "unique_stmt", "key_stmt", "list_stmt", "leaf_list_stmt",
            "leaf_stmt", "container_stmt", "grouping_stmt", "value_stmt",
            "max_value_arg", "max_elements_stmt", "min_elements_stmt",
            "error_app_tag_stmt", "error_message_stmt", "must_stmt",
            "ordered_by_arg", "ordered_by_stmt", "presence_stmt",
            "mandatory_arg", "mandatory_stmt", "config_arg", "config_stmt",
            "status_arg", "status_stmt", "position_stmt", "bit_stmt",
            "bits_specification", "union_specification",
            "identityref_specification", "instance_identifier_specification",
            "require_instance_arg", "require_instance_stmt", "path_stmt",
            "leafref_specification", "enum_stmt", "enum_specification",
            "default_stmt", "pattern_stmt", "length_stmt",
            "string_restrictions", "fraction_digits_stmt",
            "decimal64_specification", "range_stmt", "numerical_restrictions",
            "type_body_stmts", "type_stmt", "typedef_stmt", "if_feature_stmt",
            "feature_stmt", "base_stmt", "identity_stmt", "yin_element_arg",
            "yin_element_stmt", "argument_stmt", "extension_stmt",
            "revision_date_stmt", "revision_stmt", "units_stmt",
            "reference_stmt", "description_stmt", "contact_stmt",
            "organization_stmt", "belongs_to_stmt", "prefix_stmt",
            "namespace_stmt", "include_stmt", "import_stmt",
            "yang_version_stmt", "data_def_stmt", "body_stmts",
            "revision_stmts", "linkage_stmts", "meta_stmts",
            "submodule_header_stmts", "module_header_stmts", "submodule_stmt",
            "module_stmt" };

    @Override
    public String getGrammarFileName() {
        return "yangParser.g4";
    }

    @Override
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public YangParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA,
                _sharedContextCache);
    }

    public static class YangContext extends ParserRuleContext {
        public Submodule_stmtContext submodule_stmt() {
            return getRuleContext(Submodule_stmtContext.class, 0);
        }

        public Module_stmtContext module_stmt() {
            return getRuleContext(Module_stmtContext.class, 0);
        }

        public YangContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_yang;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof YangParserListener)
                ((YangParserListener) listener).enterYang(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof YangParserListener)
                ((YangParserListener) listener).exitYang(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof YangParserVisitor)
                return ((YangParserVisitor<? extends T>) visitor)
                        .visitYang(this);
            else
                return visitor.visitChildren(this);
        }
    }

    public final YangContext yang() throws RecognitionException {
        YangContext _localctx = new YangContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_yang);
        try {
            setState(214);
            switch (_input.LA(1)) {
            case MODULE_KEYWORD:
                enterOuterAlt(_localctx, 1);
                {
                    setState(212);
                    module_stmt();
                }
                break;
            case SUBMODULE_KEYWORD:
                enterOuterAlt(_localctx, 2);
                {
                    setState(213);
                    submodule_stmt();
                }
                break;
            default:
                throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class StringContext extends ParserRuleContext {
        public List<TerminalNode> PLUS() {
            return getTokens(YangParser.PLUS);
        }

        public TerminalNode STRING(int i) {
            return getToken(YangParser.STRING, i);
        }

        public TerminalNode PLUS(int i) {
            return getToken(YangParser.PLUS, i);
        }

        public List<TerminalNode> STRING() {
            return getTokens(YangParser.STRING);
        }

        public StringContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_string;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof YangParserListener)
                ((YangParserListener) listener).enterString(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof YangParserListener)
                ((YangParserListener) listener).exitString(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof YangParserVisitor)
                return ((YangParserVisitor<? extends T>) visitor)
                        .visitString(this);
            else
                return visitor.visitChildren(this);
        }
    }

    public final StringContext string() throws RecognitionException {
        StringContext _localctx = new StringContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_string);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(216);
                match(STRING);
                setState(221);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == PLUS) {
                    {
                        {
                            setState(217);
                            match(PLUS);
                            setState(218);
                            match(STRING);
                        }
                    }
                    setState(223);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class Identifier_stmtContext extends ParserRuleContext {
        public StringContext string() {
            return getRuleContext(StringContext.class, 0);
        }

        public StmtendContext stmtend() {
            return getRuleContext(StmtendContext.class, 0);
        }

        public TerminalNode IDENTIFIER() {
            return getToken(YangParser.IDENTIFIER, 0);
        }

        public Identifier_stmtContext(ParserRuleContext parent,
                int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_identifier_stmt;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof YangParserListener)
                ((YangParserListener) listener).enterIdentifier_stmt(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof YangParserListener)
                ((YangParserListener) listener).exitIdentifier_stmt(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof YangParserVisitor)
                return ((YangParserVisitor<? extends T>) visitor)
                        .visitIdentifier_stmt(this);
            else
                return visitor.visitChildren(this);
        }
    }

    public final Identifier_stmtContext identifier_stmt()
            throws RecognitionException {
        Identifier_stmtContext _localctx = new Identifier_stmtContext(_ctx,
                getState());
        enterRule(_localctx, 4, RULE_identifier_stmt);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(224);
                match(IDENTIFIER);
                setState(226);
                _la = _input.LA(1);
                if (_la == STRING) {
                    {
                        setState(225);
                        string();
                    }
                }

                setState(228);
                stmtend();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class StmtendContext extends ParserRuleContext {
        public TerminalNode RIGHT_BRACE() {
            return getToken(YangParser.RIGHT_BRACE, 0);
        }

        public TerminalNode SEMICOLON() {
            return getToken(YangParser.SEMICOLON, 0);
        }

        public Identifier_stmtContext identifier_stmt() {
            return getRuleContext(Identifier_stmtContext.class, 0);
        }

        public TerminalNode LEFT_BRACE() {
            return getToken(YangParser.LEFT_BRACE, 0);
        }

        public StmtendContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_stmtend;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof YangParserListener)
                ((YangParserListener) listener).enterStmtend(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof YangParserListener)
                ((YangParserListener) listener).exitStmtend(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof YangParserVisitor)
                return ((YangParserVisitor<? extends T>) visitor)
                        .visitStmtend(this);
            else
                return visitor.visitChildren(this);
        }
    }

    public final StmtendContext stmtend() throws RecognitionException {
        StmtendContext _localctx = new StmtendContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_stmtend);
        int _la;
        try {
            setState(239);
            switch (_input.LA(1)) {
            case SEMICOLON:
                enterOuterAlt(_localctx, 1);
                {
                    {
                        setState(230);
                        match(SEMICOLON);
                        setState(232);
                        switch (getInterpreter().adaptivePredict(_input, 3,
                                _ctx)) {
                        case 1: {
                            setState(231);
                            identifier_stmt();
                        }
                            break;
                        }
                    }
                }
                break;
            case LEFT_BRACE:
                enterOuterAlt(_localctx, 2);
                {
                    {
                        setState(234);
                        match(LEFT_BRACE);
                        setState(236);
                        _la = _input.LA(1);
                        if (_la == IDENTIFIER) {
                            {
                                setState(235);
                                identifier_stmt();
                            }
                        }

                        setState(238);
                        match(RIGHT_BRACE);
                    }
                }
                break;
            default:
                throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }
